alignment fix

--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -50,7 +50,8 @@ svg {
   width: 19.5%;
   display: flex;
   flex-direction: row;
-  align-items: center; }
+  align-items: center;
+  min-width: 20vw; }
 
 .header__logo-icon {
   width: 93%;
@@ -121,7 +122,8 @@ svg {
   margin-top: 30px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start; }
+  justify-content: flex-start;
+  flex: 0 0 18.55vw; }
 
 .sidebar__icon-repositories, .sidebar__icon-pullrequests {
   width: 5rem;
