--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -12,6 +12,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    min-width: 20vw;
+    //vw & vh + width % (is correct) can work together
 }
 
 .header__logo-icon {
