--- a/src/sass/partials/_sidebar.scss
+++ b/src/sass/partials/_sidebar.scss
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    flex: 0 0 18.55vw;
 }
 
 .sidebar__icon-repositories, .sidebar__icon-pullrequests {
